--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: metaX
 Type: Package
 Title: An R package for metabolomic data analysis
-Version: 1.4.18
+Version: 1.4.19
 Date: 2015-02-10
 Author: Bo Wen <wenbostar@gmail.com>
 Maintainer: Bo Wen <wenbostar@gmail.com>
@@ -16,7 +16,7 @@ Imports: Nozzle.R1,ggplot2,parallel,pcaMethods,reshape2,plyr,BBmisc,
         mixOmics,preprocessCore,vsn,pls,impute,missForest,doParallel,DiscriMiner,
         xcms,ape,scatterplot3d,pheatmap,bootstrap,boot,caret,dplyr,stringr,
         RColorBrewer,DiffCorr,RCurl,lattice,faahKO,data.table,CAMERA,igraph,
-        tidyr,scales,readr,e1071,randomForest,coop,mzR,fpc,ropls,sva,ROCR
+        tidyr,scales,readr,e1071,randomForest,coop,mzR,fpc,ropls,sva,ROCR,ComplexHeatmap
 License: LGPL-2
 URL: https://github.com/wenbostar/metaX
 BugReports: https://github.com/wenbostar/metaX
