--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,5 +183,11 @@ export(svrNormalize)
 export(plotTIC)
 export(getTable)
 export(plotPairs)
+export(doProteinQuantificationRLB)
+export(doProteinQuantificationILB)
+export(plotQCs)
 export(batchCorrect)
 export(calcCorBetweenProteinAndRNA)
+export(checkSampleList)
+export(printCV)
+export(plotPeakMeanDist)
