--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,7 +48,7 @@ importFrom(caret,train,trainControl,confusionMatrix,predict.train,
            createDataPartition)
 importFrom(dplyr,filter,rename,mutate,distinct,select,left_join,bind_rows,"%>%",arrange,
            group_by,n_distinct,select_,do,summarize,ungroup,contains,mutate_,
-           inner_join,one_of)
+           inner_join,one_of,n)
 importFrom(stringr,str_replace,str_detect,str_split,str_replace_all)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(DiffCorr,comp.2.cc.fdr,generate_g)
